# PE-Header-Tool

./: .gitignore  Makefile  README.md  build.sh  convert_value.cc  convert_value.h  extra_checks.cc  extra_checks.h  file_header.cc  file_header.h  main.cc  main.h  meson.build  optional_header.cc  optional_header.h  win_build.bat  win_release.bat
test/: t2.efi  t6_arm32.efi
ui/: datadirectories.cpp  datadirectories.h  datadirectories.ui  fhinformation.cpp  fhinformation.h  fhinformation.ui  fileselection.cpp  fileselection.h  fileselection_ui.ui  information.cpp  information.h  information.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  ohinformation.cpp  ohinformation.h  ohinformation.ui  potentialissues.cpp  potentialissues.h  potentialissues.ui  potentialissues_ui.ui  sectiontable.cpp  sectiontable.h  sectiontable.ui
